--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
     "flatpickr": "^4.6.13",
+    "lucide-react": "^0.525.0",
     "material-react-table": "^3.2.1",
     "next": "15.2.3",
     "pg": "^8.16.3",
@@ -41,6 +42,8 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.5.0",
+    "sweetalert2": "^11.22.2",
+    "sweetalert2-react-content": "^5.1.0",
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.6.0"
   },
