--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@tanstack/react-query-devtools": "^5.83.0",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
+    "docxtemplater": "^3.65.2",
     "flatpickr": "^4.6.13",
     "lucide-react": "^0.525.0",
     "material-react-table": "^3.2.1",
     "next": "15.2.3",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
+    "pizzip": "^3.2.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dnd": "^16.0.1",
@@ -45,15 +48,17 @@
     "sweetalert2": "^11.22.2",
     "sweetalert2-react-content": "^5.1.0",
     "swiper": "^11.2.0",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
-    "@types/node": "^20",
+    "@types/node": "^20.19.8",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-transition-group": "^4.4.12",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
