--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.6",
     "sweetalert2": "^11.22.2",
     "sweetalert2-react-content": "^5.1.0",
     "swiper": "^11.2.0",
