--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@mui/x-date-pickers": "^8.8.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/forms": "^0.5.9",
@@ -30,6 +31,7 @@
     "@tanstack/react-query-devtools": "^5.83.0",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
     "docxtemplater": "^3.65.2",
     "flatpickr": "^4.6.13",
     "lucide-react": "^0.525.0",
