--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "pizzip": "^3.2.0",
+    "puppeteer": "^24.16.1",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dnd": "^16.0.1",
