--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "autoprefixer": "^10.4.20",
     "docxtemplater": "^3.65.2",
     "flatpickr": "^4.6.13",
+    "libreoffice-convert": "^1.6.1",
     "lucide-react": "^0.525.0",
     "material-react-table": "^3.2.1",
     "next": "15.2.3",
