--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "sweetalert2-react-content": "^5.1.0",
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.6.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
