--- a/package.json
+++ b/package.json
@@ -30,13 +30,17 @@
     "@tanstack/react-query-devtools": "^5.83.0",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "docxtemplater": "^3.65.2",
     "flatpickr": "^4.6.13",
+    "jose": "^6.1.0",
+    "jsonwebtoken": "^9.0.2",
     "libreoffice-convert": "^1.6.1",
     "lucide-react": "^0.525.0",
     "material-react-table": "^3.2.1",
     "next": "15.2.3",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "pizzip": "^3.2.0",
     "puppeteer": "^24.16.1",
@@ -57,7 +61,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.8",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-transition-group": "^4.4.12",
