--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "puppeteer": "^24.16.1",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
+    "react-d3-tree": "^3.6.6",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
