--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,12 @@ services:
       POSTGRES_PASSWORD: Ortalayes1
       POSTGRES_DB: eaa
     ports:
-      - "5437:5437"                    # opsional, enak buat debug dari host
+      - "5437:5437"                           # host=5437 → container=5437
+    command: ["postgres", "-c", "port=5437"]  # override port internal
     volumes:
       - anjab-pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d eaa || exit 1"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d eaa -p 5437 || exit 1"]
       interval: 5s
       timeout: 3s
       retries: 20
@@ -24,7 +25,6 @@ services:
   anjab-app:
     build:
       context: .
-      dockerfile: Dockerfile           # <- Dockerfile kamu yang sudah ada
     container_name: anjab-app
     depends_on:
       anjab-db:
@@ -35,6 +35,7 @@ services:
       - PYTHON_BIN=/usr/bin/python3
       - SOFFICE_BIN=/usr/bin/soffice
       - SOFFICE_DIR=/usr/bin
+      # - PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium   # aktifkan jika perlu
     ports:
       - "8087:8087"
     volumes:
