--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.8",
     "@types/nodemailer": "^7.0.1",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-transition-group": "^4.4.12",
