--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "free-nextjs-admin-dashboard",
+  "name": "pandawa",
   "version": "2.0.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@bytescale/sdk": "^3.53.0",
@@ -53,10 +55,14 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-select": "^5.10.2",
+    "recharts": "^3.3.0",
     "sweetalert2": "^11.22.2",
     "sweetalert2-react-content": "^5.1.0",
     "swiper": "^11.2.0",
+    "swr": "^2.3.6",
     "tailwind-merge": "^2.6.0",
     "uuid": "^11.1.0",
     "zod": "^4.1.5"
@@ -64,18 +70,26 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.8",
     "@types/nodemailer": "^7.0.1",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-transition-group": "^4.4.12",
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8",
     "tailwindcss": "^4.0.0",
+    "ts-jest": "^29.4.4",
     "typescript": "^5"
   },
   "overrides": {
